# Byte-Engine

./: .gitignore  404.html  AGENTS.md  Byte Engine.sln  ByteEngine.sln  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  CMakeUserPresets.json  Cargo.toml  Game Studio.sln  Game Studio.sln.DotSettings  LICENSE  PUBLISHING.md  README.md  TODO.txt  aux.txt  build.sh  clippy.toml  conanfile.txt  configuration.json  index.html  install.sh  install_dependencies.sh  meson.build  report.json  robots.txt  rust-toolchain.toml  rustc-ice-2024-07-14T18_50_42-572082.txt  rustc-ice-2024-07-14T18_51_14-572989.txt  rustc-ice-2024-07-14T21_34_32-10935.txt  rustc-ice-2024-07-14T21_38_59-12942.txt  rustfmt.toml  sonar-project.properties  todo.md
ahi/: Cargo.toml
ahi/src/: audio_hardware_interface.rs
crates/ahi/: Cargo.toml
crates/ahi/src/: audio_hardware_interface.rs  lib.rs
crates/ahi/src/os/: linux.rs  macos.rs  mod.rs  win32.rs
crates/beld/: Cargo.toml
crates/beld/src/: commands.rs  main.rs  utils.rs
crates/besl/: Cargo.toml
crates/besl-derive/: Cargo.toml
crates/besl-derive/src/: lib.rs
crates/besl/fuzz/: .gitignore  Cargo.toml  README.md
crates/besl/fuzz/dictionaries/: besl.dict
crates/besl/fuzz/fuzz_targets/: compile.rs  grammar_compile.rs  parse.rs
crates/besl/fuzz/src/: lib.rs
crates/besl/src/: glsl.rs  lexer.rs  lib.rs  parser.rs  tokenizer.rs  vm.rs
crates/besl/src/vm/: compiler.rs  error.rs  execution.rs  instruction.rs  mod.rs  tests.rs  value.rs
crates/besl/tests/: derive_struct.rs  vm_compiler.rs  vm_resources.rs
crates/betp/: Cargo.toml
crates/betp/fuzz/: .gitignore  Cargo.toml  README.md
crates/betp/fuzz/dictionaries/: betp.dict
crates/betp/fuzz/fuzz_targets/: client_session.rs  decode_packet.rs  server_session.rs  support.rs
crates/betp/fuzz/scripts/: generate_decode_corpus.rs  generate_session_corpus.rs
crates/betp/src/: lib.rs  local.rs  packet_buffer.rs  packets.rs  remote.rs  udp.rs
crates/betp/src/client/: client.rs  interface.rs  mod.rs  session.rs  udp.rs
crates/betp/src/server/: client.rs  interface.rs  mod.rs  server.rs  session.rs  udp.rs
crates/byte-engine/: Cargo.toml  build.rs
crates/byte-engine/assets/rendering/: sky.besl  sky.besl.bead
crates/byte-engine/assets/schemas/: bema.schema.json  besl.bead.schema.json  model.bead.schema.json
crates/byte-engine/examples/: cube.rs  none.rs  replication.rs  sandbox.rs  sound.rs  triangle.rs  window.rs
crates/byte-engine/fuzz/: .gitignore  Cargo.toml  README.md
crates/byte-engine/fuzz/fuzz_targets/: raw_datagram.rs
crates/byte-engine/src/: application.rs  camera.rs  configuration.rs  constants.rs  gdeflate.rs  lib.rs  math.rs  time.rs  window_system.rs
crates/byte-engine/src/application/: application.rs  graphics_application.rs  mod.rs  parameters.rs  thread.rs  tracy.rs
crates/byte-engine/src/audio/: audio_system.rs  emitter.rs  generator.rs  mod.rs  round_robin.rs  sound.rs  source.rs  synthesizer.rs
crates/byte-engine/src/core/: channel.rs  domain.rs  entity.rs  event.rs  factory.rs  listener.rs  message.rs  mod.rs  property.rs  task.rs
crates/byte-engine/src/gameplay/: anchor.rs  collider.rs  killer.rs  mod.rs  object.rs  positionable.rs  space.rs  timer.rs  transform.rs  transformable.rs  world.rs
crates/byte-engine/src/input/: action.rs  action_evaluator.rs  device.rs  device_class.rs  gamepad.rs  input_manager.rs  input_trigger.rs  mod.rs  records.rs  seat.rs  utils.rs
crates/byte-engine/src/inspector/: http.rs  mod.rs
crates/byte-engine/src/network/: adverse_tests.rs  client.rs  datagram.rs  mod.rs  replicable.rs  server.rs
crates/byte-engine/tests/: cube.rs  cubecraft.rs  fps.rs  gallery_shooter.rs  none.rs  replication.rs  revolver.rs  sandbox.rs  sound.rs  sponza.rs.ignore  triangle.rs  window.rs
crates/ghi/: Cargo.toml
crates/ghi/src/: binding.rs  buffer.rs  command_buffer.rs  context.rs  descriptors.rs  device.rs  factory.rs  frame.rs  frame_resources.rs  glsl.rs  graphics_hardware_interface.rs  image.rs  lib.rs  queue.rs  raster_pipeline.rs  render_debugger.rs  rt.rs  sampler.rs  shader.rs  swapchain.rs  synchronizer.rs  types.rs  utils.rs  wayland_window.rs  win32_window.rs  window.rs  x11_window.rs
crates/ghi/src/debug/: device.rs  (+4 more)
crates/math/: Cargo.toml
crates/math/src/: collision.rs  cube.rs  lib.rs  plane.rs  ray.rs  sphere.rs
crates/resource-management/: Cargo.toml  build.rs
crates/resource-management/src/: async.rs  audio.rs  file_tracker.rs  glsl.rs  glsl_shader_generator.rs  hlsl_shader_generator.rs  image.rs  inspect.rs  lib.rs  material.rs  mesh.rs  model.rs  msl_shader_compiler.rs  msl_shader_generator.rs  pbr.rs  platform_shader_generator.rs  program_evaluation.rs  reference.rs  shader_generation.rs  shader_generator.rs  shader_graph.rs  solver.rs  spirv_shader_generator.rs  stream.rs  types.rs
crates/utils/: Cargo.toml
crates/utils/src/: async.rs  bit_array.rs  copy_fn.rs  lib.rs  stable_vec.rs  stale_map.rs  sync.rs
ghi/: Cargo.toml
ghi/src/: graphics_hardware_interface.rs  lib.rs  render_debugger.rs  shader_compilation.rs  vulkan_ghi.rs  wayland_window.rs  win32_window.rs  window.rs  x11_window.rs
ghi/src/vulkan/: mod.rs
resource_management/: Cargo.toml
resource_management/src/: audio.rs  audio_resource_handler.rs  file_tracker.rs  image.rs  lib.rs  material.rs  material_resource_handler.rs  mesh.rs  mesh_resource_handler.rs  resource_handler.rs  resource_manager.rs  shader_generation.rs  texture_resource_handler.rs  types.rs
resource_management/src/asset/: asset_handler.rs  asset_manager.rs  audio_asset_handler.rs  image_asset_handler.rs  material_asset_handler.rs  mesh_asset_handler.rs  mod.rs
resource_management/src/resource/: audio_resource_handler.rs  image_resource_handler.rs  material_resource_handler.rs  mesh_resource_handler.rs  mod.rs  resource_handler.rs  resource_manager.rs  texture_resource_handler.rs
tests/: CMakeLists.txt  TestApplication.cpp  gallery_shooter.rs  gi.rs  load.rs  revolver.rs  sponza.rs  ss.glsl
tests/gi/: Cargo.toml
tests/gi/src/: main.rs
(+1791 files in other folders)
