[workspace]
members = ["crates/*"]

cargo-features = ["edition2024"]

[workspace.package]
name = "byte-engine"
version = "0.1.0"
edition = "2024"
license = "MIT"
rust-version = "1.81.0"

[workspace.dependencies]
core = { path = "./crates/core" }
utils = { path = "./crates/utils" }
ghi = { path = "./crates/ghi" }
besl = { path = "./crates/besl" }
ahi = { path = "./crates/ahi" }
resource-management = { path = "./crates/resource-management" }

[profile.dev]
incremental = true
lto = "off"

[profile.bench]
debug = true

[profile.release]
lto = "fat"
panic = "abort"
codegen-units = 1
strip = true
