cargo-features = ["profile-rustflags"]

[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
name = "byte-engine"
version = "0.1.0"
edition = "2024"
license = "MIT"
rust-version = "1.81.0"

[profile.dev]
incremental = true
lto = "off"

[profile.bench]
debug = true

[profile.release]
lto = "fat"
panic = "abort"
codegen-units = 1
strip = true
