[package]
name = "ahi"
version = "0.1.0"
edition = "2021"
license = "MIT"
rust-version = "1.73.0"

[dependencies]

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.52.0", features = ["Win32_Media_Audio"] }

[target.'cfg(target_os = "linux")'.dependencies]
alsa = "0.8.1"