[package]
name = "ghi"
version = "0.1.0"
edition = "2021"
license = "MIT"
rust-version = "1.73.0"

[dependencies]
utils = { path = "../utils" }

ash = { version = "0.38.0", features=['linked'] }
xcb = { version = "1.2.2", features=['xtest'] }
shaderc = "0.8.2"
bitflags = "2.4.0"
colored = "2.0.4"
renderdoc = "0.12.1"
wayland-client = "0.31.2"
wayland-protocols = { version = "0.31.2", features = ['client'] }
wayland-backend = { version = "0.3.3", features = ["client_system"] }