[package]
name = "ahi"
version = "0.1.0"
edition = "2021"
license = "MIT"
rust-version = "1.73.0"

[dependencies]

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.61.1", features = ["Win32_System_Com", "Win32_Media_Audio", "Win32_Media_KernelStreaming", "Win32_Media_Multimedia"] }

[target.'cfg(target_os = "linux")'.dependencies]
alsa = "0.9.1"