[package]
name = "ahi"
version = "0.1.0"
edition = "2021"
license = "MIT"
rust-version = "1.73.0"

[dependencies]

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.62.2", features = ["Win32_System_Com", "Win32_Media_Audio", "Win32_Media_KernelStreaming", "Win32_Media_Multimedia", "Win32_System_Com_StructuredStorage", "Win32_System_Variant"] }

[target.'cfg(target_os = "linux")'.dependencies]
alsa = "0.11.0"

[target.'cfg(target_os = "macos")'.dependencies]
objc2-core-audio = "0.3.2"
objc2-audio-toolbox = "0.3.2"
objc2-core-audio-types = "0.3.2"
