[package]
name = "byte-engine-ahi"
version = "0.1.0"
edition = "2021"
authors = ["Facundo Villa <facundovilla961@gmail.com>"]
description = "Audio hardware interface layer used by Byte-Engine."
license = "MIT"
repository = "https://github.com/Game-Tek/Byte-Engine"
homepage = "https://github.com/Game-Tek/Byte-Engine"
documentation = "https://docs.rs/byte-engine-ahi"
readme = "../../README.md"
keywords = ["byte-engine", "audio", "hardware", "interface"]
categories = ["multimedia::audio", "game-development"]
rust-version.workspace = true

[lib]
name = "ahi"

[dependencies]

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.62.2", features = ["Win32_System_Com", "Win32_Media_Audio", "Win32_Media_KernelStreaming", "Win32_Media_Multimedia", "Win32_System_Com_StructuredStorage", "Win32_System_Variant"] }

[target.'cfg(target_os = "linux")'.dependencies]
alsa = "0.11.0"

[target.'cfg(target_os = "macos")'.dependencies]

objc2-audio-toolbox = "0.3.2"
objc2-core-audio-types = "0.3.2"
