[package]
name = "byte-engine"
version = "0.1.0"
edition = "2021"

[features]
default = ["headed", "network"]
headed = ["dep:ahi", "dep:ghi", "dep:besl"]
network = ["client"]
client = ["dep:betp"]

[dependencies]
utils = { path = "../utils" }
ghi = { path = "../ghi", optional = true }
ahi = { path = "../ahi", optional = true }
besl = { path = "../besl", optional = true }
resource-management = { path = "../resource-management" }
math = { path = "../math" }
betp = { path = "../betp", optional = true }

serde_json = "1.0.140"
dual_quaternion = "0.2.0"
serde = "1.0.219"
log = "0.4.26"
simple_logger = "5.0.0"
colored = "3.0.0"
downcast-rs = "2.0.1"
oxhttp = { version = "0.3.1", default-features = false, features = ["server"] }
tracing = { version = "0.1.41" }
tracing-subscriber = { version = "0.3.20", features = ["fmt"] }
smallvec = "1.15.1"
hidapi = "2.6.1"
