[package]
name = "byte-engine"
version = "0.1.0"
edition = "2021"
authors = ["Facundo Villa <facundovilla961@gmail.com>"]
description = "A composable Rust game engine focused on graphics, input, audio, physics, and retained UI."
license.workspace = true
repository = "https://github.com/Game-Tek/Byte-Engine"
homepage = "https://github.com/Game-Tek/Byte-Engine"
documentation = "https://docs.rs/byte-engine"
readme = "../../README.md"
keywords = ["game-engine", "graphics", "rendering", "ui", "audio"]
categories = ["game-engines", "graphics", "rendering"]

rust-version.workspace = true
build = "build.rs"
[features]
default = ["headed", "network"]
headed = ["dep:ahi", "dep:ghi", "dep:besl"]
network = ["client"]
client = ["dep:betp"]
dmx = ["dep:artnet_protocol"]
tracy = ["dep:tracing-log", "dep:tracing-tracy"]

[dependencies]
serde_json = "1.0.140"
utils = { package = "byte-engine-utils", path = "../utils", version = "0.1.0" }
ghi = { package = "byte-engine-ghi", path = "../ghi", version = "0.1.0", optional = true }
ahi = { package = "byte-engine-ahi", path = "../ahi", version = "0.1.0", optional = true }
besl = { package = "byte-engine-besl", path = "../besl", version = "0.1.0", optional = true }
resource-management = { package = "byte-engine-resource-management", path = "../resource-management", version = "0.1.0" }
math = { package = "byte-engine-math", path = "../math", version = "0.1.0" }
betp = { package = "byte-engine-betp", path = "../betp", version = "0.1.0", optional = true }

dual_quaternion = "0.3.0"
serde = "1.0.219"
log = "0.4.26"
env_logger = "0.11.10"
colored = "3.0.0"
downcast-rs = "2.0.1"
oxhttp = { version = "0.3.1", default-features = false, features = ["server"] }
tracing = { version = "0.1.41" }
tracing-log = { version = "0.2.0", optional = true }
tracing-subscriber = { version = "0.3.20", features = ["fmt"] }
tracing-tracy = { version = "0.11.4", optional = true }
smallvec = "1.15.1"
hidapi = "2.6.1"
trotcast = "0.5.0"
ctrlc = "3.5.1"
mid = "5.0.1"
fontdue = "0.9.3"
artnet_protocol = { version = "0.4.4", optional = true }
half = "2.4.1"
bitflags = "2.11.1"
bumpalo = { version = "3", features = ["allocator_api", "collections"] }
