[package]
name = "byte-engine-math"
version = "0.1.0"
edition = "2021"
authors = ["Facundo Villa <facundovilla961@gmail.com>"]
description = "Math type aliases and helpers used across Byte-Engine."
license = "MIT"
repository = "https://github.com/Game-Tek/Byte-Engine"
homepage = "https://github.com/Game-Tek/Byte-Engine"
documentation = "https://docs.rs/byte-engine-math"
readme = "../../README.md"
keywords = ["byte-engine", "math", "vectors", "matrices"]
categories = ["game-development", "mathematics"]
rust-version.workspace = true

[lib]
name = "math"

[dependencies]
maths-rs = "0.2.7"
