[package]
name = "resource-management"
version = "0.1.0"
edition = "2021"
license = "MIT"
rust-version = "1.81.0"
build = "build.rs"

[build-dependencies]
md5 = "0.8.0"

[dependencies]
utils = { path = "../utils" }
besl = { path = "../besl" }

shaderc = "0.10.1"
png = "0.18.0"
rkyv = { version = "0.8.15", features = ["unaligned"] }
md5 = "0.8.0"
redb = "3.1.0"
intel_tex_2 = "0.5.0"
gltf = { version = "1.4.1" }
libdeflater = "1.23.1"
meshopt = "0.6.2"
serde = "1.0.219"
serde_json = "1.0.140"
log = "0.4.26"
downcast-rs = "2.0.1"
maths-rs = "0.2.6"

gxhash = "3.5.0"
colored = "3.0.0"
vorbis_rs = "0.5.5"
compio = { version = "0.18.0", features = ["fs", "io", "macros"] }
memmap2 = "0.9.5"
